# matter-rs

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md
.github/workflows/: basic-test.yml  basic-tests.yml  build-esp32.yml  build-tlv-tool.yml  build-tlv-tool1.yml  test-esp32.yml  test-linux-mbedtls.yml  test-linux-openssl.yml  test-linux.yml
boxslab/: Cargo.toml
boxslab/src/: lib.rs
examples/esp-onoff-light/: Cargo.toml  sdkconfig.defaults
examples/esp-onoff-light/.cargo/: config.toml
examples/esp-onoff-light/src/: lib.rs  main.rs
examples/onoff_light/: Cargo.toml
examples/onoff_light/src/: dev_att.rs  lib.rs  main.rs
matter/: Cargo.toml
matter/src/: acl.rs  cert.rs  core.rs  data_model.rs  error.rs  fabric.rs  group_keys.rs  im_demux.rs  lib.rs  mdns.rs  pki.rs  proto_demux.rs  secure_channel.rs  tlv.rs  tlv_common.rs  tlv_writer.rs  transport.rs
matter/src/cert/: asn1_writer.rs  mod.rs  printer.rs
matter/src/crypto/: crypto_dummy.rs  crypto_esp_mbedtls.rs  crypto_mbedtls.rs  crypto_openssl.rs  mod.rs  pki.rs
matter/src/data_model/: cluster_basic_information.rs  cluster_on_off.rs  cluster_template.rs  core.rs  device_types.rs  mod.rs  objects.rs  sdm.rs  system_model.rs
matter/src/data_model/objects/: attribute.rs  cluster.rs  encoder.rs  endpoint.rs  mod.rs  node.rs  privilege.rs
matter/src/data_model/sdm/: dev_att.rs  failsafe.rs  general_commissioning.rs  mod.rs  noc.rs  nw_commissioning.rs
matter/src/data_model/system_model/: access_control.rs  descriptor.rs  mod.rs
matter/src/interaction_model/: command.rs  core.rs  demux.rs  messages.rs  mod.rs  read.rs  write.rs
matter/src/pki/: crypto.rs  crypto_dummy.rs  crypto_mbedtls.rs  crypto_openssl.rs  pki.rs
matter/src/secure_channel/: case.rs  common.rs  core.rs  crypto.rs  crypto_esp_mbedtls.rs  crypto_mbedtls.rs  crypto_openssl.rs  mod.rs  pake.rs  spake2p.rs  spake2p_test_vectors.rs  status_report.rs
matter/src/sys/: mod.rs  posix.rs  sys_linux.rs  sys_macos.rs
matter/src/tlv/: mod.rs  parser.rs  traits.rs  writer.rs
matter/src/transport/: exchange.rs  mgr.rs  mod.rs  mrp.rs  network.rs  packet.rs  plain_hdr.rs  proto_demux.rs  proto_hdr.rs  queue.rs  session.rs  udp.rs
matter/src/utils/: mod.rs  parsebuf.rs  writebuf.rs
matter/tests/: data_model.rs  data_model_tests.rs  interaction_model.rs
matter/tests/common/: attributes.rs  echo_cluster.rs  im_engine.rs  mod.rs
matter/tests/data_model/: acl.rs  acl_and_dataver.rs  attribute_lists.rs  attributes.rs  commands.rs
matter_macro_derive/: Cargo.toml
matter_macro_derive/src/: lib.rs
src/: core.rs  data_model.rs  error.rs  im_demux.rs  lib.rs  main.rs  proto_demux.rs  sc_demux.rs  secure_channel.rs  tlv.rs  tlv_common.rs  tlv_writer.rs  transport.rs  utils.rs
src/data_model/: cluster_basic_information.rs  cluster_on_off.rs  core.rs  device_types.rs  objects.rs
src/secure_channel/: common.rs  crypto.rs  crypto_openssl.rs  pake.rs  spake2p.rs  spake2p_test_vectors.rs  status_report.rs
src/transport/: enc_hdr.rs  exchange.rs  mgr.rs  mrp.rs  packet.rs  plain_hdr.rs  proto_hdr.rs  proto_msg.rs  session.rs  tx_ctx.rs  udp.rs
src/utils/: parsebuf.rs  writebuf.rs
tools/tlv_tool/: Cargo.toml
tools/tlv_tool/src/: main.rs
