[package]
name = "matter"
version = "0.1.0"
edition = "2018"

[lib]
name = "matter"
path = "src/lib.rs"

[features]
default = ["crypto_openssl"]
crypto_openssl = []

[dependencies]
byteorder = "1.4.3"
ccm = "0.4.4"
aes = "0.7.5"
heapless = "0.7.7"
num = "0.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
log = {version = "0.4.14", features = ["max_level_info", "release_max_level_warn"]}
env_logger = "0.9.0"
sha2 = "0.9.8"
rand = "0.8.4"
pbkdf2 = "0.9.0"
openssl = "0.10.38"
hmac = "0.11.0"
hkdf = "0.11.0"
subtle = "2.4.1"
colored = "2.0.0"
