[package]
name = "matter"
version = "0.1.0"
edition = "2018"

[lib]
name = "matter"
path = "src/lib.rs"

[features]
default = ["crypto_mbedtls"]
crypto_openssl = ["openssl"]
crypto_mbedtls = ["mbedtls"]

[dependencies]
byteorder = "1.4.3"
ccm = "0.4.4"
aes = "0.7.5"
heapless = "0.7.7"
num = "0.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
log = "0.4.14"
env_logger = "0.9.0"
sha2 = "0.9.8"
rand = "0.8.4"
openssl = { version = "0.10.38", optional = true}
mbedtls = { version = "0.8.1", optional = true}
hmac = "0.11.0"
hkdf = "0.11.0"
subtle = "2.4.1"
colored = "2.0.0"
smol = "1.2.5"
futures-lite = "1.12.0"
owning_ref = "0.4.1"
safemem = "0.3.3"
chrono = "0.4.19"

[[example]]
name = "onoff_light"
path = "../examples/onoff_light/src/main.rs"
